# kitti-object-detection-yolo

./: .gitignore  job.sh  kitti.yaml  pyproject.toml
src/kitti_object_detection_yolo/: main.py
src/kitti_object_detection_yolo/data/: convert_kitti_to_yolo.py  image_utils.py  kitti_labels.py  kitti_reader.py  splits.py
