[project]
name = "kitti-object-detection-yolo"
version = "0.1.0"
description = "YOLO-based object detection on the KITTI dataset with focus on efficient and real-time perception"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy<2",
    "pathlib>=1.0.1",
    "pillow>=12.1.1",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "ultralytics>=8.4.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kitti_object_detection_yolo"]
